--- a/res/layout/fragment_groupstudy.xml
+++ b/res/layout/fragment_groupstudy.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:background="#F2F4F7"
+    android:background="@color/grey"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     >
@@ -23,7 +23,7 @@
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:background="#0000"
+            android:background="@color/white"
             app:srcCompat="@drawable/ic_arrow_back" />
 
         <ImageButton
@@ -32,7 +32,7 @@
             android:layout_height="30dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:background="#0000"
+            android:background="@color/white"
             app:srcCompat="@drawable/ic_baseline_more_vert_24" />
     </RelativeLayout>
     <RelativeLayout
@@ -51,7 +51,7 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_pomo"
             android:text="25:00"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/black"
             android:textSize="50sp">
 
         </TextView>
@@ -219,7 +219,7 @@
             android:layout_alignBottom="@id/topics2"
             android:background = "@drawable/rounded_pomo"
             android:padding="5dp"
-            android:textColor="#FFFFFF">
+            android:textColor="@color/white">
         </TextView>
     </RelativeLayout>
 </LinearLayout>
