--- a/res/layout/fragment_register_relative.xml
+++ b/res/layout/fragment_register_relative.xml
@@ -33,7 +33,7 @@
                 android:layout_height="30dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:background="#0000"
+                android:background="@color/white"
                 app:srcCompat="@drawable/ic_arrow_back" />
 
             <ImageButton
@@ -52,7 +52,7 @@
                 android:layout_centerInParent="true"
                 android:fontFamily="Red Hat Display"
                 android:text="Sign Up"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
@@ -72,7 +72,7 @@
             android:hint="Email Address"
             android:textSize="18dp"
             android:paddingLeft="20dp"
-            android:textColorHint="#000000" />
+            android:textColorHint="@color/black" />
 
         <EditText
             android:id = "@+id/passwordEditText"
@@ -87,7 +87,7 @@
             android:hint="Password"
             android:textSize="18dp"
             android:paddingLeft="20dp"
-            android:textColorHint="#000000" />
+            android:textColorHint="@color/black" />
 
         <EditText
             android:id = "@+id/confirmEditText"
@@ -102,7 +102,7 @@
             android:textSize="18dp"
             android:fontFamily="@font/poppinsblack"
             android:paddingLeft="20dp"
-            android:textColorHint="#000000" />
+            android:textColorHint="@color/black" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/signUpButton"
@@ -116,7 +116,7 @@
             android:text="Sign Up"
             android:textAlignment="center"
 
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/white" />
 
         <RelativeLayout
             android:id = "@+id/dividerGroup"
@@ -131,7 +131,7 @@
                 android:layout_height="1dp"
                 android:layout_below="@id/signUpButton"
                 android:layout_centerVertical="true"
-                android:background="#c0c0c0" />
+                android:background="@color/darkgreen" />
 
             <TextView
                 android:id="@+id/orBox"
@@ -142,7 +142,7 @@
                 android:paddingRight = "10dp"
                 android:paddingLeft="10dp"
                 android:textAlignment="center"
-                android:background="#FFFFFF"
+                android:background="@color/white"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 />
@@ -160,7 +160,7 @@
             android:text="Sign Up with Google"
 
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:drawableLeft="@drawable/google"
             android:paddingLeft="15dp"
             />
