--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#F3F5F8</color>
-
+    <color name="green">#14DD9A</color>
+    <color name="darkgreen">#c0c0c0</color>
 </resources>
