--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -71,9 +71,9 @@
                 <ImageButton android:id="@+id/b2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_toRightOf="@id/b1" android:padding="0dp" android:src="@drawable/trytry"/>
             </LinearLayout>
         </HorizontalScrollView>
-        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="40dp" android:text="Your Tasks" android:textStyle="bold" android:textSize="30sp"
+        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="40dp" android:text="@string/tasks_title" android:textStyle="bold" android:textSize="30sp"
             android:fontFamily="@font/poppinsblack"/>
-        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="40dp" android:text="Your upcoming tasks" android:textSize="20sp" android:fontFamily="@font/poppinsblack"/>
+        <TextView android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="40dp" android:text="@string/next_lessons" android:textSize="20sp" android:fontFamily="@font/poppinsblack"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/b10"
