--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#F3F5F8</color>
     <color name="green">#14DD9A</color>
     <color name="darkgreen">#c0c0c0</color>
+    <color name="transparent_black">#4D000000</color>
 </resources>
