--- a/res/drawable/round_rect_create_room.xml
+++ b/res/drawable/round_rect_create_room.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#E5E5E5" />
+    <solid android:color="#14D39A" />
 
     <corners
         android:bottomLeftRadius="30dp"
@@ -9,4 +9,4 @@
         android:topLeftRadius="30dp"
         android:topRightRadius="30dp" />
 
-</shape>s
+</shape>
