--- a/res/layout/fragment_groupstudyroom.xml
+++ b/res/layout/fragment_groupstudyroom.xml
@@ -38,6 +38,7 @@
 
         </TextView>
         <androidx.appcompat.widget.AppCompatButton
+            android:id ="@+id/createRoomButton"
             android:layout_height="wrap_content"
             android:layout_width = "wrap_content"
             android:text="Create Room"
