--- a/res/layout/room_card.xml
+++ b/res/layout/room_card.xml
@@ -22,7 +22,7 @@
             android:padding="0dp">
         </ImageView>
         <TextView
-            android:id="@+id/roomPax1"
+            android:id="@+id/roomPax"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
