--- a/res/layout/fragment_groupstudyroom.xml
+++ b/res/layout/fragment_groupstudyroom.xml
@@ -73,74 +73,10 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp">
         </TextView>
-        <LinearLayout
-            android:id="@+id/roomsList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:id="@+id/room1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/round_rect"
-                android:padding="20dp">
-
-
-                <RelativeLayout
-                    android:id="@+id/paxLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-                    <ImageView
-                        android:id="@+id/groupIconImage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/groupicon"
-                        android:padding="0dp">
-                    </ImageView>
-                    <TextView
-                        android:id="@+id/roomPax1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="3"
-                        android:textSize="22dp"
-                        android:textStyle="bold"
-                        android:layout_toRightOf="@id/groupIconImage">
-                    </TextView>
-                </RelativeLayout>
-
-                <TextView
-                    android:layout_marginTop="20dp"
-                    android:id="@+id/groupName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Algorithms"
-                    android:textSize="20sp"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_marginTop="20dp"
-                    android:id="@+id/completionPercent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="You completed 50%"
-                    android:textSize="15sp"
-                    android:textStyle="bold">
-                </TextView>
-
-                <ProgressBar
-                    android:id="@+id/determinateBar"
-                    style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:indeterminate="false"
-                    android:indeterminateTintMode="src_in"
-                    android:progress="50" />
-
-            </LinearLayout>
-
-        </LinearLayout>
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/roomsRecyclerView"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"/>
 
 
     </LinearLayout>
