--- a/res/layout/addtask_popup.xml
+++ b/res/layout/addtask_popup.xml
@@ -27,8 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agenda"
+        android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:padding="15dp"
         android:gravity="center"
         android:layout_gravity="center"/>
@@ -46,8 +47,7 @@
             android:gravity="center"
             android:text="Task Name"
             android:textColor="@color/white"
-
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
 
         <EditText
@@ -64,7 +64,7 @@
             android:maxLength="20"
             android:singleLine="true"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -82,7 +82,7 @@
             android:text="Time"
             android:textColor="@color/white"
 
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
 
         <EditText
@@ -100,7 +100,7 @@
             android:maxLength="20"
             android:singleLine="true"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
     </RelativeLayout>
 
     <TextView
@@ -108,16 +108,18 @@
         android:layout_height="1dp"
         android:background="@color/grey"/>
     <RelativeLayout
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="10dp">
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/button_style1"
             android:text="Cancel"
             android:textAllCaps="false"
@@ -125,9 +127,11 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
             android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/button_style1"
             android:text="Save"
             android:textAllCaps="false"
