--- a/res/layout/joinroom_popup.xml
+++ b/res/layout/joinroom_popup.xml
@@ -22,12 +22,12 @@
         android:layout_height="1dp"
         android:background="@color/grey"/>
     <TextView
-        android:layout_width="180dp"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:text="Paste the room hash code below!"
         android:textColor="@color/white"
-        android:lineSpacingExtra="10px"
-        android:textSize="18sp"
+        android:lineSpacingExtra="5dp"
+        android:textSize="20sp"
         android:padding="15dp"
         android:gravity="center"
         android:layout_gravity="center"/>
